[tool.poetry]
name = "dldl-keras"
version = "0.1.0"
description = "keras implementation of DLDL"
authors = ["T-Sumida <ui.suto05@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.6.0"
albumentations = "0.5.2"
keras = "2.6.*"
taskipy = "^1.9.0"
pandas = "1.3.0"

[tool.poetry.dev-dependencies]
pysen = {version = "0.9.1", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"

[[tool.pysen.lint.mypy_targets]]
  paths = ["."]


[tool.taskipy.tasks]
fmt = { cmd = "pysen run format", help = "format code" }
lint = { cmd = "pysen run lint", help = "exec lint" }